--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 *.html linguist-detectable=false
+*.java linguist-detectable=true
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
+*.ipynb linguist-detectable=false
+*.py linguist-detectable=false
